--- a/server/app/js/components/messages/messages.html
+++ b/server/app/js/components/messages/messages.html
@@ -1,6 +1,6 @@
-<ul>
+<ul class="scroll-list">
     <li ng-repeat="message in $ctrl.messages" class="message">
-        <span class="user">{{message.user}}</span>
+        <span>{{message.user}}:</span>
         <span>{{message.message}}</span>
     </li>
 </ul>
