--- a/server/app/js/components/chat/chat.html
+++ b/server/app/js/components/chat/chat.html
@@ -1,17 +1,18 @@
-<div>Username: {{$ctrl.username}}</div>
-<div>Channel: {{$ctrl.channel}}</div>
 <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3 well">
+        <div>{{$ctrl.username}}</div>
+        <div ng-if="$ctrl.channel">{{$ctrl.channel}}</div>
         <channels-list channels="$ctrl.channels" select-channel="$ctrl.onChannelSelect(value)"></channels-list>
     </div>
     <div class="col-md-9">
         <messages messages="$ctrl.messages"></messages>
     </div>
 </div>
-<div class="row" ng-if="$ctrl.channel">
+
+<div class="row well" ng-if="$ctrl.channel" id="footer">
     <div class="">
     </div>
-    <div class="col-md-offset-3 col-md-9 well">
+    <div class="col-md-offset-3 col-md-9">
         <form class="form-group" ng-submit="$ctrl.send()">
             <div class="form-group">
                 <textarea ng-model="$ctrl.message" cols="30" rows="5" class="form-control" required></textarea>
