--- a/server/app/style.css
+++ b/server/app/style.css
@@ -1,7 +1,16 @@
 .message:nth-child(odd) {
     background-color: #ecf0f1;
 }
-
-.user {
-    background-color: #2ecc71;
+.scroll-list {
+    width: 100%;
+    height: 20em;
+    line-height: 2em;
+    overflow: scroll;
+    overflow-x: hidden;
+}
+#footer {
+    position: fixed;
+    bottom: 0;
+    margin: 0;
+    width: 100%;
 }
